cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug214185.cpp
template<class Container>
inline auto cbegin(Container &cont) -> decltype(cont)
{ return cont; }

